src/test/deca/codegen/valid/created/class/acces_champs.ass
	TSTO #9
	BOV pile_pleine
	ADDSP #6
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.A.a, R0
	STORE R0, 5(GB)
; Main program
; new ligne 19
	NEW #2, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 6(GB)
; Beginning of main instructions:
	LOAD 6(GB), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
; Appel de méthode ligne 21
	ADDSP #1
	LOAD 6(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #1
	LOAD R0, R2
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP -3(LB), R1
	SEQ R0
	RTS
; Classe A
; ---------- Initialisation des champs de A
init.A:
	LOAD -2(LB), R1
	LOAD #0, R0
	STORE R0, 1(R1)
	RTS
; ---------- Code de la methode a dans la classe A ligne 10
code.A.a:
	TSTO #2
	BOV pile_pleine
; Sauvegarde des registres
	PUSH R2
	PUSH R3
	LOAD -2(LB), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	SUB #0, R2
	LOAD R2, R1
	WINT
	WNL
	LOAD #0, R2
	LOAD -2(LB), R3
	CMP #null, R3
	BEQ dereferencement.null
	LOAD 1(R3), R3
	SUB R3, R2
	LOAD R2, R1
	WINT
	WNL
	LOAD -2(LB), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	SUB #0, R2
	LOAD R2, R1
	WINT
	WNL
	LOAD #0, R2
	LOAD -2(LB), R3
	CMP #null, R3
	BEQ dereferencement.null
	LOAD 1(R3), R3
	SUB R3, R2
	LOAD R2, R1
	WINT
	WNL
fin.A.a:
	POP R3
	POP R2
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement.null"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : tas_plein"
	WNL
	ERROR
; end main program
