src/test/deca/codegen/invalid/created/dereferencement_null.ass
	TSTO #9
	BOV pile_pleine
	ADDSP #6
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de B
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.B.met, R0
	STORE R0, 5(GB)
; Main program
	LOAD #null, R2
	STORE R2, 6(GB)
; Beginning of main instructions:
; Appel de méthode ligne 13
	ADDSP #1
	LOAD 6(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #1
	LOAD R0, R2
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP -3(LB), R1
	BEQ Object.equals.true
	LOAD #0, R0
	BRA fin.Object.equals
Object.equals.true:
	LOAD #1, R0
fin.Object.equals:
	RTS
; Classe B
; ---------- Code de la methode met dans la classe B ligne 8
code.B.met:
	TSTO #1
	BOV pile_pleine
; Sauvegarde des registres
	PUSH R2
fin.B.met:
	POP R2
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement.null"
	WNL
	ERROR
; end main program
